# qwen3-tts-mlx

./: .gitignore  README.md  pyproject.toml
src/qwen3_tts_mlx/: __init__.py  cli.py  config.py  tts.py
